--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@ body {
 .notover {
   width: 100%;
   height: 100%;
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
